--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,64 @@
-.App {
+@import "~antd/dist/antd.css";
+
+body {
+  background-color: #f0f2f5;
+}
+
+.home-box {
+  position: relative;
+  z-index: 1;
+  background: #ffffff;
+  max-width: 80%;
+  height: 700px;
+  margin: 0 auto 100px;
+  top: 50px;
+  padding: 45px;
   text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.home-box h1 {
+  position: relative;
+  font-size: 350%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home-box button {
+  margin: 10px;
+  max-width: 25%;
 }
 
-.App-link {
-  color: #61dafb;
+.login-form {
+  position: relative;
+  background: #ffffff;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  top: 65px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.login-form-forgot {
+  float: right;
+}
+.login-form-button {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.register-form {
+  position: relative;
+  background: #ffffff;
+  max-width: 50%;
+  margin: 0 auto 100px;
+  top: 65px;
+  padding: 45px 150px 45px 45px;
+  text-align: left;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.register-form input {
+  width: 100%;
+}
+
+.register-form-forgot {
+  width: 100%;
 }
